assets/css/main.css
/* ... */
@media only screen and (max-width:750px){
  body{
    -webkit-overflow-scrolling: touch;
  }
    .hasCountdown{
      width: 75%;
    }
    
} 

@media only screen and (max-width:480px){
    .hasCountdown{
      width: 100%;
    }
} 

.contact-info{
    padding: 20px;
}
.fb-like{
    padding: 20px;
    overflow: hidden;
    width: 100%;
}
.main-footer .top {
    background-color: #66798F;
    color: #fff;
    padding: 85px 0px 50px;
}
.main-footer .bottom {
    background-color: #344961;
    color: #fff;
    font-size: 13px;
    padding: 13px 0px;
    border-top: 1px solid #344961;
}
.main-footer .footer-social li a{
    background: #344961;
}
.contact .contact-location-toggle-btn span{
    background:#66798F;
}
.facebook{
    background: #3962B9 !important;
}
.google{
    background: red !important;
}
.twitter{
    background: #4285F4 !important;
}
.instagram{
    background: #FAC628 !important;
}
.facebook:hover,.twitter:hover,.google:hover,.instagram:hover{
    opacity:0.8 !important;
}
.contact .contact-location-toggle-btn{
    border: 3px solid #66798F;
}

